# infinite-escape-velocity

./: .gitignore  Cargo.toml  Makefile.toml
.cargo/: config.toml
src/: aabb_iterator.rs  collision_component.rs  distributing_queue.rs  hash_coordinates.rs  id_type.rs  identifiable_object.rs  main.rs  shape.rs  shared_types.rs  shrink_storage.rs  spatial_hashmap.rs  unique_id_allocator.rs  unique_object.rs  unique_object_storage.rs
src/.cargo/: config.toml
src/backend/: aabb_iterator.rs  collision_component.rs  controllable_component.rs  dynamic_object.rs  mod.rs  motion_component.rs  player_object_binding.rs  server_viewport.rs  shape.rs  ship.rs  shrink_storage.rs  spatial_hashmap.rs  unique_id_allocator.rs  unique_object.rs  unique_object_storage.rs  world_interaction_event.rs  world_interaction_handler.rs  world_object_constructor.rs
src/backend/components/: mod.rs
src/backend/configuration_file_loaders/: asset_bundle_loader.rs  asset_file_cache.rs  definition_file_cache.rs  mod.rs
src/backend/data_objects/: input_status.rs  mod.rs
src/backend/player_info/: mod.rs  player_profile.rs  player_session.rs
src/backend/resources/: delta_t_resource.rs  mod.rs
src/backend/spatial_hashmap/: aabb_iterator.rs  mod.rs  spatial_hashmap.rs
src/backend/spatial_optimizer/: aabb_iterator.rs  collision_optimizer.rs  hash_cell_size.rs  hash_coordinates.rs  hash_sized.rs  mod.rs
src/backend/systems/: apply_player_control.rs  damage_system.rs  health_system.rs  mod.rs  player_session_cleanup.rs  player_spawn_system.rs  submit_command.rs  update_collisions_with_position.rs  update_collisions_with_rotation.rs  update_positions_with_velocity.rs  update_rotations_with_angular_momentum.rs  update_rotations_with_angular_velocity.rs  update_velocities_with_semi_newtonian_physics.rs
src/backend/unique_object_storage/: mod.rs  unique_id_allocator.rs  unique_object.rs  unique_object_storage.rs
src/backend/world_object_storage/: cleanup_predicate.rs  ephemeral_id_allocator.rs  mod.rs  world_object.rs  world_object_storage.rs
src/backend/world_objects/: mod.rs  planetoid.rs  server_viewport.rs  ship.rs
src/configuration_file_structures/: asset_definition_file.rs  asset_load_order_file.rs  load_order_file.rs  mod.rs  object_configuration_record.rs  planetoid_configuration_file.rs  reference_string_types.rs  reference_types.rs  ship_configuration_file.rs
src/configuration_loaders/: dynamic_object_configuration.rs  dynamic_object_file.rs  dynamic_object_record.rs  graphics_configuration.rs  mod.rs  object_configuration.rs  object_configuration_file.rs  object_configuration_record.rs  object_type_map.rs
src/connectivity/: asset_index.rs  asset_index_response.rs  asset_server.rs  client_server_message.rs  connected_users.rs  controllable_object_message_data.rs  dynamic_object_message_data.rs  mod.rs  player_profile_handlers.rs  player_profiles.rs  player_session_handlers.rs  player_sessions.rs  server_client_message.rs  user_session.rs  view_layers.rs  websocket_handler.rs
src/connectivity/handlers/: chat_handlers.rs  mod.rs  player_profile_handlers.rs  player_session_handlers.rs  websocket_handler.rs
src/connectivity/models/: chat_message_request.rs  chat_message_response.rs  mod.rs
src/connectivity/player_info/: mod.rs  player_profile.rs  player_profiles.rs  player_session.rs  player_sessions.rs
src/connectivity/services/: chat_service.rs  ecs_communication_service.rs  mod.rs
src/frontend/: controlled_object_handler.rs  dynamic_object_client_data.rs  frontend_viewport.rs  mod.rs  object_texture_mapping.rs  starfield_generator.rs  texture_mapper.rs
src/misc/: blackbody_table_generator.rs
src/misc/blackbody/: Cargo.toml
src/utility/: async_handle.rs  cancel_flag.rs  mod.rs
webapp/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
webapp/src/: index.html  main.ts
webapp/src/app/: app.component.html  app.component.less  app.component.ts  app.config.ts  app.module.ts
(+48 files in other folders)
