[package]
name = "infinite-escape-velocity"
version = "0.1.0"
authors = ["Grant Jennings <gajbooks@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6", features=["ws"] }
axum-server = { version="*", features=["tls-rustls"] }
bevy_ecs = "*"
clap = { version = "4", features = ["derive"] }
dashmap = "5"
euclid = {version = "0.22", features = ["serde"]}
fxhash = "0.2"
futures = "0.3"
futures-util = "0.3"
num = "0.4"
rand = "0.8"
rayon = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin_sleep = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace", "compression-br", "compression-deflate", "compression-gzip"] }
ts-rs = { version="7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
walkdir = "2"

[profile.release]
lto = true
codegen-units=1
debug = true
split-debuginfo = "packed"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3
debug = false
